--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
+      - name: Login to DockerHUB Registry
+        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
       - name: buildx
         run: |
           docker buildx create --use --name builder --driver-opt network=host
