--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -17,4 +17,4 @@ jobs:
           docker buildx create --use --name builder --driver-opt network=host
           docker buildx inspect --bootstrap
       - name: fdsa
-        run: docker buildx build --builder builder --file Dockerfile.backend --platform linux/amd64,linux/arm64,linux/arm/v7 --tag ionhasihcorp/frontend:latest --push .
+        run: docker buildx build --builder builder --file Dockerfile.backend --platform linux/amd64,linux/arm64,linux/arm/v7 --tag ionhasihcorp/backend:latest --push .
